<?xml version="1.0" encoding="utf-8"?>

<!-- mall_activity.xml
Primary Layout file for this Project
Created by: Kelly McGuinn

Last Modified by: Kelly McGuinn
Last Modified on: 3/6/15
Assignment/Project: A290 Android Development
Part of: Final App
-->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:padding="12dp" >

    <Space />

    <ImageView
        android:id="@+id/mall"
        android:layout_width="296dp"
        android:layout_height="162dp"
        android:layout_gravity="left"
        android:layout_row="2"
        android:scaleType="centerCrop"
        android:src="@drawable/mall" 
        android:contentDescription="TODO"/>

    <Space
        android:layout_column="0"
        android:layout_gravity="fill_vertical"
        android:layout_row="4" />

    <TextView
        android:id="@+id/mallinstructions"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/mallinstructions"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/dress"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:layout_row="5"
        android:text="@string/dress" />

    <CheckBox
        android:id="@+id/necklace"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:layout_row="6"
        android:text="@string/necklace" />

    <CheckBox
        android:id="@+id/shoes"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:layout_row="5"
        android:text="@string/shoes" />

    <CheckBox
        android:id="@+id/purse"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="43dp"
        android:layout_marginTop="0dp"
        android:layout_row="6"
        android:text="@string/purse" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_row="4" />
    
    <Space 
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_row="3" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_row="11" />

    <TextView
        android:id="@+id/select"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:text="@string/select"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/checkprice"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="12"
        android:text="@string/checkprice" />

</GridLayout>