<!-- activity_main.xml
Primary Layout file for this Project
Created by: Kelly McGuinn

Last Modified by: Kelly McGuinn
Last Modified on: 3/6/15
Assignment/Project: A290 Android Development
Part of: Final App
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.indiana.finalapp.MainActivity" >
    

    <Button
        android:id="@+id/ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/ibutton" />

    <ImageButton
        android:id="@+id/mall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/ibutton"
        android:layout_alignLeft="@+id/salon"
        android:background="@drawable/salon"
        android:contentDescription="@+id/mall" />

    <ImageButton
        android:id="@+id/salon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/cell"
        android:layout_marginRight="35dp"
        android:layout_marginTop="70dp"
        android:layout_toLeftOf="@+id/cell"
        android:background="@drawable/salon"
        android:contentDescription="@+id/salon" />

    <ImageButton
        android:id="@+id/partyshop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/ibutton"
        android:layout_below="@+id/salon"
        android:background="@drawable/salon"
        android:contentDescription="@+id/partyshop" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/PARTY"
        android:textSize="50sp" />

    <ImageButton
        android:id="@+id/cell"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/partyshop"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:background="@drawable/salon"
        android:contentDescription="@+id/cell" />

    <TextView
        android:id="@+id/salontxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/partyshop"
        android:text="@string/salontxt"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/malltxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/salontxt"
        android:layout_below="@+id/mall"
        android:text="@string/malltxt"
        android:textSize="12sp" />

</RelativeLayout>